<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="about_app">About App</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragments</string>
    <string name="about_app_fragment">This is a book app(Book Hub) where you can view and get detailed descriptions of book and mark all your favourites in one place</string>
    <string name="about_the_book">About the Book</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="action_sort">Sort</string>
    <string name="profile_name"> Name:</string>
    <string name="name">Ndiwe Wacho </string>
    <string name="email">uvwxyz@xyz.com</string>
    <string name="profile_email"> Email: </string>
    <string name="profile_Id"> ID:</string>
    <string name="id">Q012AZXY</string>
    <string name="profile_phone"> Phone Number: </string>
    <string name="phone">0123 456 789</string>
    <string name="profile_address"> Address: </string>
    <string name="address">1234 Kumba Tumbare, Dehli</string>
    <string name="about">ABOUT</string>
</resources>