<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/book_app_icon_web"
        android:layout_gravity="center"
        android:scaleType="centerCrop"/>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12"
        android:layout_marginTop="30dp"
        android:background="@drawable/text_boundary_background">
        <TextView
            android:id="@+id/txtProfileNameStatic"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_profile"/>

        <TextView
            android:id="@+id/txtProfileName"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:padding="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_boundary_background">
        <TextView
            android:id="@+id/txtProfileIDStatic"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/profile_Id"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_id"/>


        <TextView
            android:id="@+id/txtProfileID"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="20sp"
            android:padding="10dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_boundary_background">
        <TextView
            android:id="@+id/txtProfileEmailStatic"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_email"/>

        <TextView
            android:id="@+id/txtProfileEmail"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_boundary_background">
        <TextView
            android:id="@+id/txtProfilePhoneStatic"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_phone"/>

        <TextView
            android:id="@+id/txtProfilePhone"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20sp"
            android:padding="10dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_boundary_background">
        <TextView
            android:id="@+id/txtProfileAddressStatic"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/profile_address"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_location"/>


        <TextView
            android:id="@+id/txtProfileAddress"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20sp"
            android:padding="10dp" />

    </LinearLayout>





</LinearLayout>